--- a/.editorconfig
+++ b/.editorconfig
@@ -11,9 +11,10 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 
 [*.md]
+
 trim_trailing_whitespace = false
 
-[{/dist/**,/node_modules/**}]
+[{/dist/**,/node_modules/**,package-lock.json}]
 
 indent_style = unset
 indent_size = unset
