--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,12 +4,21 @@ env:
 extends:
   - eslint:recommended
   - plugin:@typescript-eslint/recommended
+  - plugin:import/recommended
+  - plugin:import/typescript
+settings:
+  import/resolver:
+    typescript:
+      alwaysTryTypes: true
+overrides: []
 parser: "@typescript-eslint/parser"
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 plugins:
   - "@typescript-eslint"
+  - sort-exports
+  - prefer-arrow
 rules:
   indent:
     - error
@@ -20,6 +29,59 @@ rules:
   quotes:
     - error
     - single
-  semi:
+  semi: off
+  "@typescript-eslint/semi":
+    - error
+    - always
+  "@typescript-eslint/member-delimiter-style":
+    - error
+    - multiline:
+        delimiter: comma
+        requireLast: false
+      overrides:
+        interface:
+          multiline:
+            delimiter: semi
+            requireLast: true
+  import/group-exports: error
+  import/no-self-import: error
+  import/no-useless-path-segments: error
+  import/order:
+    - error
+    - groups:
+        - builtin
+        - external
+        - parent
+        - sibling
+        - index
+        - object
+        - type
+      alphabetize:
+        order: asc
+  sort-imports:
+    - error
+    - ignoreDeclarationSort: true
+  sort-exports/sort-exports:
+    - error
+    - sortDir: asc
+  comma-dangle:
     - error
     - never
+  arrow-body-style:
+    - error
+    - as-needed
+  prefer-arrow/prefer-arrow-functions:
+    - error
+    - singleReturnOnly: true
+  prefer-arrow-callback:
+    - error
+    - allowNamedFunctions: true
+  func-style:
+    - error
+    - expression
+  brace-style:
+    - error
+    - 1tbs
+  curly: error
+  no-multi-spaces: error
+  prefer-template: error
