--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "poolsketch",
-  "version": "1.0.1",
-  "description": "Unofficial API wrapper for PoolSketch.",
-  "main": "dist/index.js",
+  "version": "1.0.0",
+  "description": "API wrapper for PoolSketch.",
+  "main": "./dist/index.js",
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
+    "prebuild": "rimraf ./dist/",
+    "build": "run-s build:*",
+    "build:tsc": "tsc",
+    "build:tsc-alias": "tsc-alias",
     "prepare": "npm run build"
   },
   "repository": {
@@ -13,28 +15,33 @@
     "url": "git+https://github.com/sqrtox/poolsketch.git"
   },
   "keywords": [
-    "poolsketch",
-    "client"
+    "client",
+    "poolsketch"
   ],
   "author": "sqrtox",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/sqrtox/poolsketch/issues"
   },
   "homepage": "https://github.com/sqrtox/poolsketch#readme",
   "devDependencies": {
-    "@types/jsdom": "^16.2.14",
     "@types/user-agents": "^1.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.0",
+    "eslint-import-resolver-typescript": "^3.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-sort-exports": "^0.7.0",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.4"
+    "tsc-alias": "^1.7.0",
+    "typescript": "^4.8.2"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "form-data": "^4.0.0",
-    "jsdom": "^19.0.0",
-    "user-agents": "^1.0.1003"
+    "happy-dom": "^6.0.4",
+    "user-agents": "^1.0.1129"
   }
 }
