--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "./dist/"
   ],
   "author": "sqrtox",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sqrtox/poolsketch/issues"
   },
